# ADAVI_ICLR2022

./: README.md  setup.cfg
adavi/: __init__.py
adavi/dual/: __init__.py  graph.py  models.py
adavi/normalizing_flow/: __init__.py  bijectors.py  layers.py
adavi/set_transformer/: layers.py
data/: NC_dataset.p
examples/: GM_ADAVI.py  GM_CF-A.py  GM_CF-NA.py  GM_MF-VI.py  GM_NPE-C.py  GM_SNPE-C.py  GM_TLSF-A.py  GM_TLSF-NA.py  GRE_ADAVI.py  GRE_CF-A.py  GRE_CF-NA.py  GRE_MF-VI.py  GRE_NPE-C.py  GRE_SNPE-C.py  GRE_TLSF-A.py  GRE_TLSF-NA.py  MSHBM_ADAVI.py  NC_ADAVI.py  NC_CF-A.py  NC_MF-VI.py  README.md
examples/baselines/: summary_networks.py
examples/generative_hbms/: GM.py  GRE.py  MSHBM.py  NC.py
examples/juho_lee_set_transformer/: README.md
