[metadata]
name = adavi
version = 0.0.1
description = Tensorflow implementation of ADAVI
author = "Louis Rouillard"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: DSB License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8, <3.9
install_requires =
    numpy
    tensorflow
    tensorflow-probability
    networkx
    ipykernel
    ipywidgets
    matplotlib
    torch
    torchvision
    torchaudio
    sbi
